2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* reserved.c (system_table): Add "SYSLST".

2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* typeck.c (cb_build_move): Handle cb_error_node.
	(cb_build_add, cb_build_sub): Native arithmetic for pointers.

2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* cobc.c: Use _WIN32 instead of __CYGWIN__ or __MINGW32__.

2003-05-21  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cb_class, cb_category): New enums.

2003-05-19  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.h (CB_STANDARD_GNU): New standard.
	* cobc.h, cobc.c (cb_standard): Default compiler is now gnu.

2003-05-18  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (short_options): New option `-O'
	* flag.def (cb_flag_inline_get_int, cb_flag_inline_move): New flags.
	* codegen.c (output_int32): Inlining cob_get_int.
	(output_move): Inlining cob_move.

2003-05-06  Keisuke Nishida  <knishida@netlab.jp>

	* flag.def (cb_flag_check_numeric): Removed.
	(cb_flag_check_subscript): Removed.
	(cb_flag_check_ref_mod): Removed.
	* warning.def (cb_warn_obsolete): New variable.
	* cobc.h (cb_standard, cb_binary_rep): New variables.
	(cb_exception_table): New varialbe.
	(CB_EXCEPTION_CODE, CB_EXCEPTION_NAME, CB_EXCEPTION_ENABLE): New macro.
	* cobc.c (long_options): New option -std and -debug.
	(short_options): Remove -T.
	(process_command_line): Handle new/old options.
	(cb_obsolete, cb_unconformable): New functions.
	* tree.c (compute_size): Compute size depending on cb_binary_rep.
	* parser.y (push_file_handler): New macro.

2003-05-04  Keisuke Nishida  <knishida@netlab.jp>

	* flag.def: New file.

2002-11-01  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (resolve_predefined_names): Call recursively.

	* tree.h (YYLTYPE): Moved from parser.y.

2002-10-30  Keisuke Nishida  <knishida@netlab.jp>

	* inline.c (output_search): Move index to variable.

	* inline.c (output_search_all): Unified `cmp' variable.
