@@ -180,11 +180,9 @@ output_base (struct cb_field *f)
     {
       if (!f01->flag_external && !f01->flag_local)
 	output_storage ("static ");
-      output_storage ("unsigned char %s%s[%d]",
+      output_storage ("unsigned char %s%s[%d]  __attribute__ ((__aligned__));",
 		      CB_PREFIX_BASE, name, f01->memory_size);
-      if (cb_field_need_aligned (f01))
-	output_storage (" __attribute__ ((__aligned__))");
-      output_storage ("; /* %s */\n", f01->name);
+      output_storage ("\t/* %s */\n", f01->name);
       f01->flag_base = 1;
     }
   output ("%s%s", CB_PREFIX_BASE, name);
