@@ -517,19 +517,8 @@ compute_size (struct cb_field *f)
 	    }
 	  else
 	    {
-	      int align_size;
-
 	      c->offset = f->offset + size;
 	      size += compute_size (c) * c->occurs_max;
-
-	      /* word alignment */
-	      align_size = cb_field_align_size (c);
-	      if (c->offset % align_size != 0)
-		{
-		  int pad = align_size - (c->offset % align_size);
-		  c->offset += pad;
-		  size += pad;
-		}
 	    }
 	}
       f->size = size;
